--- a/helpers.css
+++ b/helpers.css
@@ -1,5 +1,5 @@
 .bg-light {
-    background-color: rgb(218, 211, 211);
+    background-color: rgba(245, 169, 70, 0.288);
 }
 .text-center {
     text-align: center;
