--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,8 @@ nav li{
 /*Footer*/
 
 #footer{
-	padding: 4rem 3rem 4rem 3rem;
+	margin-top: 150px;
+	min-height: 60vh;
 	background: black;
 	color: white;
 	box-shadow: 0 0.1px 10px rgba(0,0,0,0.16), 0 0.1px 0.1px rgba(0,0,0,0.23);
