--- a/styles.css
+++ b/styles.css
@@ -23,17 +23,45 @@ nav{
 	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 	padding: 0 10%;
 }
-nav a{
-  color: black;
+nav ul{
+	list-style: none;
+}
+nav ul a{
   display: block;
+  color: black;
   text-decoration: none;
   text-transform: uppercase;
-  padding: 0.25rem;
+  padding: 0.5rem;
 }
-nav li{
-  display: inline-block;
+nav ul li{
+	position:relative;
+    float:left;
+    margin:0;
+    padding:0;
   }
-
+nav ul li:hover {
+	box-shadow: 0 0.1px 10px rgba(245, 169, 70, 0.288), 0 0.1px 0.1px rgba(245, 169, 70, 0.288);
+}
+nav ul ul{
+    display:none;
+    position:absolute;
+    top:100%;
+    left:0;
+	padding:0;
+	background-color: white;
+	box-shadow: 0 3px 6px rgba(0,0,0,0.16);
+}
+nav ul ul li {
+	float:none;
+	min-width:150px;
+	
+}
+nav ul ul a {
+    padding:10px 25px;
+}
+nav ul li:hover > ul {
+    display:block;
+}
 /*Intro section*/
 #intro{
 	min-height: 100vh;
