--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,10 @@ img{
 nav{
 	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 	padding: 0 10%;
+	position: fixed;
+	left: 0;
+	right: 0;
+	background-color: white;
 }
 nav ul{
 	list-style: none;
